--- a/src/assets/scss/global/base-styles.scss
+++ b/src/assets/scss/global/base-styles.scss
@@ -312,15 +312,15 @@ input[type='button'] {
   text-align: center;
   text-decoration: none;
   white-space: nowrap;
-  background-color: var(--color-primary);
-  color: var(--color-bg);
+  background-color: var(--color-button-bg);
+  color: var(--color-button-text);
   border-radius: 1px;
   cursor: pointer;
   box-sizing: border-box;
 
   :root[data-theme="dark"] & {
-    color: var(--color-title-dark);
-    background-color: var(--color-link-dark);
+    background-color: var(--color-button-bg-dark);
+    color: var(--color-button-text-dark);
   }
 }
 
@@ -343,6 +343,8 @@ input[type='reset']:focus:enabled,
 input[type='reset']:hover:enabled,
 input[type='button']:focus:enabled,
 input[type='button']:hover:enabled {
+  background-color: var(--color-button-hover-bg);
+  color: var(--color-button-hover-text);
   outline: 0;
 }
 
